--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -19,3 +19,5 @@ org.gradle.jvmargs=-Xmx1536M
 #systemProp.https.proxyHost=127.0.0.1
 #systemProp.http.proxyPort=1086
 android.enableR8=true
+android.useAndroidX=true
+android.enableJetifier=true
