--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -36,9 +36,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
 
-//        applicationId "com.jiguang.jpushexample"
-
-        applicationId "com.shikk.testJpush" //JPush 上注册的包名.
+        applicationId "com.jiguang.jpushexample"
 
         minSdkVersion 17
         targetSdkVersion 30
@@ -55,8 +53,11 @@ android {
 
         manifestPlaceholders = [
                 JPUSH_PKGNAME : applicationId,
-                JPUSH_APPKEY : "31c7c1b2cf59c1d42895a782", //JPush 上注册的包名对应的 Appkey.
+                JPUSH_APPKEY : "jsdkfhaljskghhisadhg", //JPush 上注册的包名对应的 Appkey.
                 JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+
+                XIAOMI_APPKEY : "MI-21516556136516", // 小米平台注册的appkey
+                XIAOMI_APPID : "MI-654638438548489", // 小米平台注册的appid
         ]
     }
     signingConfigs {
@@ -90,4 +91,5 @@ flutter {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
+    implementation 'cn.jiguang.sdk.plugin:xiaomi:3.9.1'//版本号和对应的JPush版本号相同
 }
